apps/misc/lubelogger/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lubelogger
spec:
  type: ClusterIP
  ports:
    - name: web-ui
      port: 8080
      targetPort: web-ui
